<resources>

    <string name="app_name">Location App</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="user_location_permission_explanation">Accept permission!</string>
    <string name="user_location_permission_not_granted">permission not granted!</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicGV5MTMiLCJhIjoiY2tudm14aGE3MG81eTJwbWt5ZWNuM3c4cSJ9.6i1-MRGeA7QWx5KsW6IXlw</string>
    <string name="LocationButton">MyLocation</string>
    <string name="SearchButton">Search</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_app_data_from_phone">Delete App Data From Phone</string>
    <!--    preferences     -->
    <string name="theme_title">theme</string>
    <integer name="theme">0</integer> <!--at first, is phone default-->
    <string name="themeDark_title">themeDark</string>
    <string name="DarkLocationTheme">DarkLocationTheme</string>
    <string name="LightLocationTheme">LightLocationTheme</string>
    <string name="m_s">m/s</string>
    <bool name="themeDark">false</bool>

    <integer name="theme_enum_default">0</integer>
    <integer name="theme_enum_light">1</integer>
    <integer name="theme_enum_dark">2</integer>
    <string name="can_t_connect_to_the_gps">Can\'t connect to the GPS</string>
    <string name="try_again">try again</string>
    <string name="turn_on">turn on</string>
</resources>
