<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.mobdev.locationapp.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks">
        <action
            android:id="@+id/action_navigation_show_bookmark_in_map"
            app:destination="@id/navigation_map">
            <argument
                android:name="bookmark_x"
                android:defaultValue="0"
                app:argType="float" />
            <argument
                android:name="bookmark_y"
                android:defaultValue="0"
                app:argType="float" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_no_gps"
        android:name="com.mobdev.locationapp.ui.map.NoGpsFragment"
        tools:layout="@layout/fragment_no_gps">
        <action
            android:id="@+id/action_navigation_load_map_again"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.mobdev.locationapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_navigation_no_gps"
            app:destination="@id/navigation_no_gps" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.mobdev.locationapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>